--- a/Login.html
+++ b/Login.html
@@ -41,17 +41,17 @@
             <input type="submit" class="btn" value="Register" />
             <p class="social-text">Or Sign up with social platforms</p>
             <div class="social-media">
-              <a href="#" class="social-icon">
-                <img src="facebook.png">
+              <a href="#" class="social-icon" >
+                <img src="facebook.png"alt="">
               </a>
               <a href="#" class="social-icon">
-                <img src="twitter.png">
+                <img src="twitter.png"alt="">
               </a>
               <a href="#" class="social-icon">
-                <img src="google.png">
+                <img src="google.png"alt="">
               </a>
               <a href="#" class="social-icon">
-                <img src="linkedin.png">
+                <img src="linkedin.png"alt="">
               </a>
             </div>
           </form>
