--- a/Login.html
+++ b/Login.html
@@ -17,12 +17,19 @@
           <form action="#" class="sign-in-form">
             <h2 class="title">Login</h2>
             <div class="input-field">
+              <i class="fas fa-envelope"></i>
+              <input type="email" placeholder="Email" required=""/>
+            </div>
+            <div class="text-field">
+              <p><h4>OR</h4></p>
+            </div>
+            <div class="input-field">
               <i class="fas fa-user"></i>
-              <input type="text" placeholder="Username" />
+              <input type="text" placeholder="Username" required="" />
             </div>
             <div class="input-field">
               <i class="fas fa-lock"></i>
-              <input type="password" placeholder="Password" />
+              <input type="password" placeholder="Password" required="" />
             </div>
             <input type="submit" value="Login" class="btn solid" />
             
@@ -32,11 +39,11 @@
             
             <div class="input-field">
               <i class="fas fa-envelope"></i>
-              <input type="email" placeholder="Email" />
+              <input type="email" placeholder="Email" required=""/>
             </div>
             <div class="input-field">
               <i class="fas fa-lock"></i>
-              <input type="password" placeholder="Password" />
+              <input type="password" placeholder="Password"  required=""/>
             </div>
             <input type="submit" class="btn" value="Register" />
             <p class="social-text">Or Sign up with social platforms</p>
